--- a/intro.tex
+++ b/intro.tex
@@ -50,25 +50,21 @@ In contrast to the previous scheme, the gate-teleportation scheme requires the a
 
 
 
-\paragraph{Obfuscating Beyond Cliffords} Next, in our main result \Cref{QiO:Clifford+T:family}, we generalize the gate-teleportation scheme for Clifford circuits, and show an $Qi\mathcal{O}$ obfuscator for all quantum circuits where the number of non-Clifford ($T$) gates is at most logarithmic in the circuit size. 
+\paragraph{Obfuscating Beyond Cliffords} Next, in our main result (\Cref{QiO:Clifford+T:family}), we generalize the gate-teleportation scheme for Clifford circuits, and show a $Qi\mathcal{O}$ obfuscator for all quantum circuits where the number of non-Clifford  gates is at most logarithmic in the circuit size. For this, we consider the commonly-used Clifford+$\tgate$ gateset, and we note that the $\tgate$ relates to the $\xgate, \zgate$ as: $\tgate \xgate^b \zgate^a=\xgate^b \zgate^{a\oplus b}\pgate^b \tgate$. This means that, if we implement a circuit $C$ with $\tgate$-gates as in the gate-teleportation scheme above, then the \emph{correction} function is no longer a simple Pauli update. However, this in only partially true: since the Paulis form a basis, there is always a way to represent an update as a complex, linear combination of Pauli matrices. In particular, for the case of a $\tgate$, we note that $\pgate=(\frac{1+i}{2}) \igate + (\frac{1-i}{2})\zgate$. Hence, it \emph{is} possible to produce an update function for general quantum circuits that are encoded via gate teleportation. To illustration this, we first analyze the case of a general Clifford+$\tgate$ quantum circuit on a \emph{single} qubit \Cref{sec:1-qubit}. Here, we are able to provide $Qi\mathcal{O}$ for all circuits. Next, for general quantum circuits, \Cref{sec:n-qubit-circuits}, we note that the update function becomes more and more complex as the number of $\tgate$ increases. We show that if limit the number of $\tgate$ to be logarithmic in the circuit size, we can nevertheless reach an efficient construction.
+
+
+We note that, also for other quantum cryptographic primitives, the $\tgate$ is often the bottleneck (somewhat skin to a \emph{multiplication} in the classical case. This has been observed, \emph{e.g.}, in the context of \emph{homomorphic quantum encryption} \cite{BJ15}, instantaneous quantum computation \cite{TODO} and also.... TODO 
+
+
+
+%In section \ref{sec:QiO-Cliffords and more} we provide a new definition of quantum indistinguishability obfuscation. We provide two methodologies for constructing a quantum indistinguishability obfuscation for Clifford circuits. One is based on canonical form of Clifford circuits  while other is based on the principle of gate teleportation.  The construction based on canonical form requires no computational assumptions and is in fact perfectly indistinguishability obfuscation (information theoratically secure), where as the gate teleportation based construction assumes the existence of a quantum secure classical $i\mathcal{O}.$ In section \ref{QiO:Clifford+T:family} we show how to a construct quantum indistinguishability obfuscation from gate teleportation and $i\mathcal{O}$ for any reversible quantum circuit that has at most logarithmic $\tgate$-gates.
 
 
 
 
 
 
-Furthermore, in our main result, we manage to generalize the gate-teleportation scheme for Clifford circuits, and show an $Qi\mathcal{O}$ obfuscator for all quantum circuits where the number of non-Clifford ($T$) gates is at most logarithmic in the circuit size.
-
-
-
-In section \ref{sec:QiO-Cliffords and more} we provide a new definition of quantum indistinguishability obfuscation. We provide two methodologies for constructing a quantum indistinguishability obfuscation for Clifford circuits. One is based on canonical form of Clifford circuits  while other is based on the principle of gate teleportation.  The construction based on canonical form requires no computational assumptions and is in fact perfectly indistinguishability obfuscation (information theoratically secure), where as the gate teleportation based construction assumes the existence of a quantum secure classical $i\mathcal{O}.$ In section \ref{QiO:Clifford+T:family} we show how to a construct quantum indistinguishability obfuscation from gate teleportation and $i\mathcal{O}$ for any reversible quantum circuit that has at most logarithmic $\tgate$-gates.
-
-
-
-
-
-
-In this work we define a new definition of computational quantum obfuscation $Qi\mathcal{O}$ and provide two concrete instantiation of it. The first instantiation is based on the work of Aaronson and Gottesman~\cite{AG04}, In this paper, an efficient algorithm to compute a canonical form of any Clifford circuit was describe. The second instantiation is based on gate-teleportation \cite{} and assume an existence of a quantum-secure classical $i\mathcal{O}$ for certain class of functions (section \Cref{update function}). Using this technique we can obfuscate any $n$-qubit quantum circuit as far as the number of $\tgate$-gates are in $O(\log(n)).$
+%In this work we define a new definition of computational quantum obfuscation $Qi\mathcal{O}$ and provide two concrete instantiation of it. The first instantiation is based on the work of Aaronson and Gottesman~\cite{AG04}, In this paper, an efficient algorithm to compute a canonical form of any Clifford circuit was describe. The second instantiation is based on gate-teleportation \cite{} and assume an existence of a quantum-secure classical $i\mathcal{O}$ for certain class of functions (section \Cref{update function}). Using this technique we can obfuscate any $n$-qubit quantum circuit as far as the number of $\tgate$-gates are in $O(\log(n)).$
 
 
 
