--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,7 @@
 \usepackage[english]{babel}
 %\usepackage[toc]{multitoc}
 \usepackage{amsmath}
-\usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue,citecolor=red]{hyperref}
+\usepackage[colorlinks=true,linkcolor=blue,urlcolor=blue,citecolor=blue]{hyperref}
 \usepackage[nameinlink,capitalise]{cleveref}
 %\usepackage{cleveref}
 \floatname{algorithm}{Algorithm}
@@ -75,6 +75,12 @@ and outputs a new circuit $C^\prime$ that has the same functionality as the inpu
 %********************
 \input{BuildingQiO.tex}
 %********************
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%Section Constructing iO
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%********************
+
+\input{BuildingQiO-non-clifford.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Section Application of quantum-secure classical iO
