--- a/more.bib
+++ b/more.bib
@@ -4,3 +4,35 @@
   journal={arXiv preprint arXiv:1310.6813},
   year={2013}
 }
+@article{AMMR13,
+  title={A meet-in-the-middle algorithm for fast synthesis of depth-optimal quantum circuits},
+  author={Amy, Matthew and Maslov, Dmitri and Mosca, Michele and Roetteler, Martin},
+  journal={IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
+  volume={32},
+  number={6},
+  pages={818--830},
+  year={2013},
+  publisher={IEEE}
+}
+
+
+@article{DMM16,
+  title={Parallelizing quantum circuit synthesis},
+  author={Di Matteo, Olivia and Mosca, Michele},
+  journal={Quantum Science and Technology},
+  volume={1},
+  number={1},
+  pages={015003},
+  year={2016},
+  publisher={IOP Publishing}
+}
+@article{AMM14
+  title={Polynomial-time T-depth optimization of Clifford+ T circuits via matroid partitioning},
+  author={Amy, Matthew and Maslov, Dmitri and Mosca, Michele},
+  journal={IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
+  volume={33},
+  number={10},
+  pages={1476--1489},
+  year={2014},
+  publisher={IEEE}
+}
