--- a/prelims.tex
+++ b/prelims.tex
@@ -1,4 +1,5 @@
 \section{Preliminaries}
+\label{sec:prelims}
 \subsection{Basic Classical Cryptographic Notions}
 \label{sec:classical-prelims}
 Let $\mathbb{N}$ be the set of positive integers. For $n \in \mathbb{N}$, we set $[n] = \{1, \cdots, n\}.$ We denote the set of all  binary strings of length $n$ by $\bit{n}.$
