--- a/more.bib
+++ b/more.bib
@@ -4,6 +4,7 @@
   journal={arXiv preprint arXiv:1310.6813},
   year={2013}
 }
+
 @article{AMMR13,
   title={A meet-in-the-middle algorithm for fast synthesis of depth-optimal quantum circuits},
   author={Amy, Matthew and Maslov, Dmitri and Mosca, Michele and Roetteler, Martin},
@@ -26,7 +27,7 @@
   year={2016},
   publisher={IOP Publishing}
 }
-@article{AMM14
+@article{AMM14,
   title={Polynomial-time T-depth optimization of Clifford+ T circuits via matroid partitioning},
   author={Amy, Matthew and Maslov, Dmitri and Mosca, Michele},
   journal={IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
