--- a/Appendix.tex
+++ b/Appendix.tex
@@ -1,4 +1,5 @@
 \section{Appendix} 
+\label{sec:appendix}
  \subsection{Indistinguishability Obfuscator for Update Functions}
  \label{sec: iO-clifford-functions}
  In this section we show that how one can easily construct a quantum secure $i\mathcal{O}$ for update function corresponding to Clifford Circuit. Suppose $C_q$ is an $n$-qubit circuit.
